[tool.poetry]
name = "intern-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.3.0"
transformers = "^4.21.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
